--- a/src/Core/wwwroot/index.html
+++ b/src/Core/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Termy</title>
     <script src="webcomponentjs/webcomponents-lite.js"></script>
     <script src="webcomponentjs/webcomponents-loader.js"></script>
 </head>
