Update to Polymer 3.0 Stable.

--- a/src/Core/index.html
+++ b/src/Core/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termy</title>
-    <script src="webcomponentjs/webcomponents-lite.js"></script>
-    <script src="webcomponentjs/webcomponents-loader.js"></script>
+    <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js" async></script>
+    <script src="./buildts/my-app.js" type="module" async></script>
 </head>
 
 <body>
